backstage/minio/manifests/backstage-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage-minio-console-http
spec:
  hostnames:
  - console.backstage-minio.localhost
  parentRefs:
  - name: cilium-http-gateway
    namespace: cilium-http-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: backstage-minio-console
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage-minio-http
spec:
  hostnames:
  - backstage-minio.localhost
  parentRefs:
  - name: cilium-http-gateway
    namespace: cilium-http-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: backstage-minio
      port: 80
